--- a/src/components/part5-homepage/styles.scss
+++ b/src/components/part5-homepage/styles.scss
@@ -5,7 +5,7 @@
     position: relative;
 }
 .part5-heading {
-    border: 1px solid black;
+    // border: 1px solid black;
     width: 1171px;
     height: 50px;
     position: absolute;
@@ -14,14 +14,18 @@
 }
 .view-more-link-part5 {
     position: absolute;
-    right: -20px;
+    right: -80px;
     top: 20px;
 }
 .part5-list {
     width: 1188px;
     height: 392px;
-    border: 1px solid black;
+    // border: 1px solid black;
     position: absolute;
     top: 97px;
     left: 134px;
 }
+// .swiper-slide {
+//     height: 161px !important;
+
+// }
