--- a/src/components/part3-homepage/styles.scss
+++ b/src/components/part3-homepage/styles.scss
@@ -25,6 +25,8 @@
     border-radius: 50%;
     width: 272px;
     height: 276px;
+    // width: 150px;
+    // height: 150px;
     display: inline-block;
     text-align: center;
 
