style card blog component and refactor miscellaneous stuffs

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -2,8 +2,9 @@
 
 .header {
     position: relative;
-    width: 100%;
+    width: unset;
     height: 24px;
+    background-color: white;
 }
 .left-side {
     position: absolute;
