--- a/src/components/card-blog/styles.scss
+++ b/src/components/card-blog/styles.scss
@@ -11,9 +11,21 @@
 //   border: 1px solid yellow;
   width: fit-content;
   height: fit-content;
+  margin-top: 17px;
+  margin-left: 18px;
 }
 .content-wrapper {
 //   border: 1px solid green;
+  position: relative;
+  height: auto;
+  min-height: 100% !important;
+  padding: 16px;
+  
+  &::after {
+    content: '';
+    padding: 8px;
+  }
+  padding-top: unset;
 }
 .content-date {
     // border: 1px solid black;
@@ -34,7 +46,7 @@
   line-height: 21.09px;
   letter-spacing: 0.2px;
   text-align: left;
-  margin-bottom: 13px
+  margin-bottom: 5px;
 }
 .content-paragraph {
     // border: 1px solid black;
