refactor font-family to Montserrat

--- a/src/components/about-us/styles.scss
+++ b/src/components/about-us/styles.scss
@@ -32,19 +32,19 @@
   margin-top: 26px;
 }
 .about-us-heading {
-  font-family: 'Roboto';
+  font-family: 'Montserrat';
 }
 
 .about-us-heading-right {
   position: absolute;
   right: 10%;
-  font-family: 'Roboto';
+  font-family: 'Montserrat';
 }
 
 .left-paragraph {
   width: 514px;
   height: 155px;
-  font-family: 'Roboto';
+  font-family: 'Montserrat';
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
