--- a/src/components/card-blog/styles.scss
+++ b/src/components/card-blog/styles.scss
@@ -29,7 +29,7 @@
 }
 .content-date {
     // border: 1px solid black;
-    font-family: "Roboto";
+    font-family: "Montserrat";
     font-weight: 500;
     font-size: 14px;
     line-height: 16.41px;
@@ -40,7 +40,7 @@
 }
 .content-heading {
 //   border: 1px solid black;
-  font-family: "Roboto";
+  font-family: "Montserrat";
   font-size: 18px;
   font-weight: bold;
   line-height: 21.09px;
@@ -50,7 +50,7 @@
 }
 .content-paragraph {
     // border: 1px solid black;
-    font-family: "Roboto";
+    font-family: "Montserrat";
     font-size: 14px;
     font-weight: 400;
     line-height: 16.41px;
