--- a/src/components/part3-homepage/styles.scss
+++ b/src/components/part3-homepage/styles.scss
@@ -32,7 +32,7 @@
 
 }
 .activity-heading {
-    font-family: "Roboto";
+    font-family: "Montserrat";
     font-weight: 700;
     font-size: 20px;
     line-height: 23.44px;
@@ -42,7 +42,7 @@
 }
 .activity-paragraph {
     text-align: center;
-    font-family: "Roboto";
+    font-family: "Montserrat";
     width: 171px;
     word-wrap: break-word;
 }
