--- a/src/components/part4-homepage/styles.scss
+++ b/src/components/part4-homepage/styles.scss
@@ -69,7 +69,7 @@
     left: 130px;
     bottom: 15px;
     color: #FFFFFF;
-    font-family: "Roboto";
+    font-family: "Montserrat";
     font-weight: 500;
     font-size: 14px;
     line-height: 16.41px;
