--- a/src/components/testimonials/styles.scss
+++ b/src/components/testimonials/styles.scss
@@ -32,7 +32,7 @@
 }
 .testimonial-quotes {
     // border: 1px solid black;
-    font-family: Roboto;
+    font-family: Montserrat;
     font-size: 16px;
     font-weight: 400;
     line-height: 18.75px;
@@ -42,7 +42,7 @@
 }
 .testimonial-signature {
     // border: 1px solid black;
-    font-family: Roboto;
+    font-family: Montserrat;
     font-size: 16px;
     font-weight: 700;
     line-height: 18.75px;
