--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -41,7 +41,7 @@
         }
         .company-name {
             width: fit-content;
-            font-family: Roboto;
+            font-family: Montserrat;
             font-size: 16px;
             font-weight: 700;
             line-height: 18.75px;
@@ -53,7 +53,7 @@
         .company-contact-info {
             width: 300px;
             height: 80px;
-            font-family: Roboto;
+            font-family: Montserrat;
             font-size: 14px;
             line-height: 16.41px;
             text-align: left;
@@ -64,7 +64,7 @@
     .lien-ket {
         color: #FFFFFF;
         .heading {
-            font-family: Roboto;
+            font-family: Montserrat;
             font-size: 16px;
             font-weight: 700;
             line-height: 18.75px;
@@ -74,7 +74,7 @@
         }
         .links {
             // border: 1px solid red;
-            font-family: Roboto;
+            font-family: Montserrat;
             font-size: 14px;
             font-weight: 400;
             line-height: 16.41px;
