--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -14,7 +14,7 @@
     gap: 50px;
     align-items: center;
     justify-content: center;
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
     font-size: 11px;
     font-weight: 500;
     line-height: 12.89px;
