--- a/src/components/part6-homepage/styles.scss
+++ b/src/components/part6-homepage/styles.scss
@@ -30,7 +30,7 @@
 .part6-heading {
     display: flex;
     justify-content: space-between;
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
     font-weight: 500;
     font-size: 28px;
     line-height: 49px;
