--- a/src/components/part7-homepage/styles.scss
+++ b/src/components/part7-homepage/styles.scss
@@ -8,7 +8,7 @@
 .part7-heading {
     display: flex;
     justify-content: center;
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
     font-weight: 500;
     font-size: 28px;
     line-height: 49px;
@@ -28,7 +28,7 @@
     left: 142px;
     top: 71px;
     background: #FFFFFF;
-    font-family: "Roboto";
+    font-family: "Montserrat";
 }
 .hot-news-list {
     // border: 1px solid red;
