--- a/src/components/about-us/styles.scss
+++ b/src/components/about-us/styles.scss
@@ -1,3 +1,4 @@
+
 .about-us {
   position: absolute;
   background-color: #FFFFFF;
@@ -32,19 +33,19 @@
   margin-top: 26px;
 }
 .about-us-heading {
-  font-family: 'Montserrat';
+  font-family: Montserrat
 }
 
 .about-us-heading-right {
   position: absolute;
   right: 10%;
-  font-family: 'Montserrat';
+  font-family: Montserrat;
 }
 
 .left-paragraph {
   width: 514px;
   height: 155px;
-  font-family: 'Montserrat';
+  font-family: Montserrat;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
