--- a/src/components/part3-homepage/styles.scss
+++ b/src/components/part3-homepage/styles.scss
@@ -1,6 +1,6 @@
 .part3-homepage {
     width: 100%;
-    height: 430px;
+    height: 450px;
     background: white;
     position: relative;
 }
@@ -19,16 +19,18 @@
     gap: 27px;
 }
 .activity {
-    // background: green;
-    border: 1px solid #BEBEBE;
-    box-shadow: 5px 5px 5px 0px #e9e9e9;
-    border-radius: 50%;
     width: 272px;
-    height: 276px;
-    // width: 150px;
-    // height: 150px;
+    /* height: 276px; */
     display: inline-block;
     text-align: center;
+    // border: 1px solid black;
+    position: relative;
+    height: auto;
+    min-height: 100% !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 .activity-heading {
@@ -49,11 +51,17 @@
 .activity-paragraph-wrapper {
     width: 188px;
     height: max-content;
-    padding-left: 50px;
-    padding-top: 25px;
+    padding-left: 25px;
+    padding-top: 5px;
 }
 .activity-image {
     text-align: center;
-    margin-top: 27px;
     height: 70px;
+    border: 2px solid #E3E3E3;
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
