--- a/src/components/homepage/testimonials/styles.scss
+++ b/src/components/homepage/testimonials/styles.scss
@@ -20,6 +20,7 @@
     height: 100%;
     // border: 1px solid black;
     border-radius: 50%;
+    padding-left: 26px;
 }
 .testimonial-text {
     width: 100%;
