--- a/src/components/homepage/part5-homepage/styles.scss
+++ b/src/components/homepage/part5-homepage/styles.scss
@@ -11,6 +11,13 @@
     position: absolute;
     top: 33px;
     left: 134px;
+    .heading-content {
+        font-family: "Montserrat";
+        font-size: 28px;
+        font-weight: 600px;
+        line-height: 49px;
+        margin-bottom: 5px;
+    }
 }
 .view-more-link-part5 {
     position: absolute;
