--- a/src/components/service02-page/styles.scss
+++ b/src/components/service02-page/styles.scss
@@ -17,7 +17,7 @@
         height: 728px;
         display: flex;
         flex-direction: column;
-        gap: 46px;
+        gap: 25px;
         padding-top: 32px;
         padding-right: 30px;
         padding-left: 37px;
@@ -36,12 +36,13 @@
         }
         .top-services {
             // border: 1px solid red;
-            padding-top: 32px;
             padding-right: 30px;
             padding-left: 30px;
             display: flex;
             flex-direction: column;
             gap: 48px;
+            overflow-y: scroll;
+
         }
         
     }
