add project page

--- a/src/components/other-services/styles.scss
+++ b/src/components/other-services/styles.scss
@@ -2,3 +2,10 @@
     position: absolute;
     top: 58px;
 }
+
+.other-service-list-flex {
+    position: absolute;
+    width: 1039px;
+    top: 100px;
+    left: 65px;
+}
