add news detail page

--- a/src/components/other-services/styles.scss
+++ b/src/components/other-services/styles.scss
@@ -9,3 +9,18 @@
     top: 100px;
     left: 65px;
 }
+.other-news-list {
+    position: relative;
+    width: 1039px;
+    top: 100px;
+    right: 70px;
+}
+.other-news-list-detail {
+    width: 1039px;
+    top: 50px;
+    left: 70px;
+}
+.detail-page-list{
+    position: absolute;
+    top: 70px
+}
