--- a/src/components/service-detail-page/styles.scss
+++ b/src/components/service-detail-page/styles.scss
@@ -4,60 +4,53 @@
     height: 2182px;
     display: flex;
     justify-content: center;
-    align-items: center;
     padding-top: 36px;
     font-family: Montserrat;
 }
 
-.service-detail-component-wrapper {
-    background: #FFFFFF;
-    width: 1170px;
-    height: 2113px;
-    display: flex; 
-    padding: 1.5rem; 
-    flex-direction: column; 
-
-
-    @media (min-width: 768px) { 
-    flex-direction: row; 
-    }
-
-    .detail-leftside-wrapper {
+.detail-leftside-wrapper {
     @media (min-width: 768px) { 
         width: 66.666667%; 
         }
+}
+.detail-rightside-wrapper {
+    @media (min-width: 768px) { 
+    padding-left: 1.5rem; 
+    width: 33.333333%; 
     }
-    .detail-rightside-wrapper {
-        @media (min-width: 768px) { 
-        padding-left: 1.5rem; 
-        width: 33.333333%; 
-        }
-        .newest-services {
-            width: 382px;
-            height: 500px;
-            // border: 1px solid red;
-            position: relative;
+    .newest-services {
+        width: 382px;
+        height: 500px;
+        // border: 1px solid red;
+        position: relative;
 
-            .newsest-services-list {
-                // border: 1px solid red;
-                position: absolute;
-                top: 80px;
-                max-width: 364px;
-            }
-        }
-        .special-services {
-            width: 382px;
-            height: 486px;
+        .newsest-services-list {
             // border: 1px solid red;
-            position: relative;
-            .special-services-outline {
-                position: absolute;
-                top: 70px;
-                display: flex;
-                flex-direction: column;
-                gap: 12px;
-            }
+            position: absolute;
+            top: 80px;
+            max-width: 364px;
         }
+    }
+    .special-services {
+        width: 382px;
+        height: 486px;
+        // border: 1px solid red;
+        position: relative;
+        .special-services-outline {
+            position: absolute;
+            top: 70px;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+    }
+}
+.service-detail-component-wrapper {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+
+    @media (min-width: 768px) { 
+    flex-direction: row; 
     }
 }
 .newest-service-card-wrapper {
@@ -79,4 +72,19 @@
                  line-clamp: 4; 
          -webkit-box-orient: vertical;
     }
+}
+.service-detail-outline {
+    background: #FFFFFF;
+    width: 1170px;
+    height: max-content;
+    display: flex; 
+    flex-direction: column;
+    position: relative;
+    padding: 1.5rem; 
+}
+.other-service-wrapper {
+    background: #FFFFFF;
+    width: 1170px;
+    height: 1000px;
+    position: relative;
 }
