--- a/src/components/services-page/styles.scss
+++ b/src/components/services-page/styles.scss
@@ -75,7 +75,7 @@
             color: black;
         }
         a:hover {
-            color: white;
+            // color: white;
         }
     }
 }
