add miscellaneous things

--- a/src/components/homepage/part5-homepage/styles.scss
+++ b/src/components/homepage/part5-homepage/styles.scss
@@ -14,7 +14,7 @@
     .heading-content {
         font-family: "Montserrat";
         font-size: 28px;
-        font-weight: 600px;
+        font-weight: 600;
         line-height: 49px;
         margin-bottom: 5px;
     }
